# advent24

./: Cargo.toml  README.md
inputs/day4/: input2.txt
inputs/day9/: test2.txt
src/: bytegrid.rs  chargrid.rs  lib.rs  main.rs
src/challenges/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs
