[package]
name = "advent24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "2.0.0"
clap = { version = "4.5.21", features = ["derive"] }
itertools = "0.13.0"
pathfinding = "4.11.0"
regex = "1.11.1"
